--- a/langraph learning/seq_workflow.ipynb
+++ b/langraph learning/seq_workflow.ipynb
@@ -281,7 +281,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = 'AIzaSyDQ5UCL6CHe_-FbtSkDDuvpUE8mrF_FCTg'"
+    "api_key = """
    ]
   },
   {
